--- a/.github/workflows/GithubActions.yml
+++ b/.github/workflows/GithubActions.yml
@@ -11,5 +11,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-interaction --no-progress
       - name: Run tests
         run: php artisan test
