--- a/.github/workflows/GithubActions.yml
+++ b/.github/workflows/GithubActions.yml
@@ -12,6 +12,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: composer install --prefer-dist --no-interaction --no-progress
+        run: 
+              cd IQWorld 
+              composer install --prefer-dist --no-interaction --no-progress
+              
       - name: Run tests
         run: php artisan test
