--- a/.github/workflows/GithubActions.yml
+++ b/.github/workflows/GithubActions.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Install dependencies
         run: |
-          cd sous-repertoire
+          cd IQWorld
           composer install --prefer-dist --no-interaction --no-progress
               
       - name: Run tests
