--- a/.github/workflows/GithubActions.yml
+++ b/.github/workflows/GithubActions.yml
@@ -17,4 +17,6 @@ jobs:
           composer install --prefer-dist --no-interaction --no-progress
               
       - name: Run tests
-        run: php artisan test
+        run: |
+          cd IQWorld 
+          php artisan test
