--- a/.github/workflows/GithubActions.yml
+++ b/.github/workflows/GithubActions.yml
@@ -28,6 +28,8 @@ jobs:
         run: |
           cd IQWorld
           composer install --prefer-dist --no-interaction --no-progress
+      - name: Migrate Datas
+        run: php artisan migrate
               
       - name: Run tests
         run: |
