--- a/.github/workflows/GithubActions.yml
+++ b/.github/workflows/GithubActions.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           cd IQWorld
           php artisan migrate
+          yes
               
       - name: Run tests
         run: |
